--- a/01-basics/04-MeetupTitle/index.html
+++ b/01-basics/04-MeetupTitle/index.html
@@ -6,19 +6,20 @@
   </head>
   <body>
     <div id="app">
-      <div>
-        <label><input type="radio" value="1" /> 1</label>
-        <label><input type="radio" value="2" /> 2</label>
-        <label><input type="radio" value="3" /> 3</label>
-        <label><input type="radio" value="4" /> 4</label>
-        <label><input type="radio" value="5" /> 5</label>
-
+      <div v-cloak>
+        <label v-for="number in 5"><input type="radio" :value="number" v-model="picked" />{{ number }}</label>
         <hr />
 
-        <h3>MEETUP_TITLE</h3>
+        <h3>{{ currentMeetup.title }}</h3>
       </div>
     </div>
 
     <script type="module" src="script.js"></script>
   </body>
 </html>
+
+<style>
+  [v-cloak] {
+    display: none;
+  }
+</style>
